<package>
  <name>victoria_nav_msgs</name>
  <version>0.1.0</version>
  <description>
    This package defines messages used for navigation in the Victoria robot.</description>
  <maintainer email="mwomack@gmail.com">Mark Womack</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
